27_matrix_input/grade.txt
Grading at Fri May 29 14:58:31 UTC 2020
Attempting to compile rotateMatrix.c
rotateMatrix.c: In function ‘main’:
rotateMatrix.c:47:12: error: suggest parentheses around comparison in operand of ‘&’ [-Werror=parentheses]
       if (j<10&c!='\n'){
            ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
